--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@ionic/react-router": "^8.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "ionicons": "^7.0.0",
+    "axios": "^1.7.7",
+    "ionicons": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
@@ -43,7 +44,7 @@
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
-    "vite": "~5.2.0",
+    "vite": "5.2.13",
     "vitest": "^0.34.6"
   },
   "description": "An Ionic project"
